--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -10,5 +10,6 @@
 		android:id="@+id/sessione"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:paddingLeft="25dp"/>
+		android:paddingLeft="25dp"
+		android:paddingRight="25dp"/>
 </LinearLayout>
