--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -8,7 +8,7 @@
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:id="@+id/sessione"
+		android:id="@+id/sessioneChild"
 		android:layout_alignParentLeft="true"
 		android:layout_centerVertical="true"
 		android:paddingLeft="25dp"/>
@@ -17,7 +17,6 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:id="@+id/image"
-		android:src="@drawable/ic_check_green_24dp"
 		android:layout_alignParentRight="true"
 		android:layout_centerVertical="true"/>
 
