--- a/app/src/main/res/layout/fragment_intermediate.xml
+++ b/app/src/main/res/layout/fragment_intermediate.xml
@@ -8,10 +8,24 @@
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_centerHorizontal="true"
+		android:text="La prossima attività deve essere svolta da:"
+		android:textSize="28sp"
+		android:textColor="@color/textDarkColor"
+		android:layout_above="@id/scenario"
+		android:textAlignment="center"
+		android:layout_marginBottom="20dp"/>
+
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		android:textSize="36sp"
 		android:id="@+id/scenario"
 		android:layout_centerVertical="true"
-		android:layout_centerHorizontal="true"/>
+		android:layout_centerHorizontal="true"
+		android:layout_marginBottom="36dp"
+		android:textColor="#000000"
+		android:textStyle="italic"/>
 
 	<Button
 		android:layout_width="wrap_content"
