--- a/app/src/main/res/layout/fragment_quiz2.xml
+++ b/app/src/main/res/layout/fragment_quiz2.xml
@@ -39,4 +39,13 @@
 
 	</GridLayout>
 
+	<Button
+		android:id="@+id/next"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/gridContainer"
+		android:layout_centerHorizontal="true"
+		android:text="Avanti"
+		android:visibility="gone"/>
+
 </RelativeLayout>
