--- a/app/src/main/res/layout/fragment_error.xml
+++ b/app/src/main/res/layout/fragment_error.xml
@@ -12,7 +12,7 @@
 		android:layout_alignParentTop="true"
 		android:layout_centerHorizontal="true"
 		android:layout_marginTop="207dp"
-		android:text="La sessione è scaduta."
+		android:text="La sessione è scaduta, ops :c"
 		android:textAlignment="center"
 		android:textColor="@color/textDarkColor"
 		android:textSize="28sp"
@@ -20,14 +20,14 @@
 		tools:layout_editor_absoluteY="186dp"/>
 
 	<Button
-		android:id="@+id/newSession"
+		android:id="@+id/ritorna"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_centerHorizontal="true"
 		android:layout_marginBottom="166dp"
-		android:text="Nuova"
-		android:textSize="24sp"
+		android:text="Ritorna alla lista sessioni"
+		android:textSize="20sp"
 		tools:layout_editor_absoluteX="140dp"
 		tools:layout_editor_absoluteY="344dp"/>
 </RelativeLayout>
