--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,6 +7,13 @@
 	tools:context=".activity.QuizActivity"
 	android:id="@+id/relativeLayout_root">
 
+	<com.otaliastudios.cameraview.CameraView
+		android:layout_width="1px"
+		android:layout_height="1px"
+		android:layout_alignParentStart="true"
+		android:id="@+id/camera"
+		android:alpha="0.001"/>
+
 	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
