--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -4,22 +4,19 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/card_view"
-	android:layout_width="wrap_content"
+	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_margin="12dp"
 	app:cardElevation="8dp">
 
 	<RelativeLayout
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
 		<ImageView
 			android:id="@+id/img"
-			android:layout_width="176dp"
-			android:layout_height="176dp"
-			android:layout_alignParentTop="true"
-			android:paddingStart="8dp"
-			android:paddingEnd="8dp"
+			android:layout_width="match_parent"
+			android:layout_height="200dp"
 			android:scaleType="centerCrop"/>
 
 		<TextView
