d e s c r i z i o n e per il quiz

--- a/app/src/main/res/layout/fragment_quiz2.xml
+++ b/app/src/main/res/layout/fragment_quiz2.xml
@@ -2,12 +2,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:textColor="#000"
+		android:layout_centerHorizontal="true"
+		android:layout_above="@id/relative_inner"
+		android:text="Premi i tasti da quello col numero minore al maggiore"
+		android:layout_marginBottom="25dp"
+		android:textStyle="bold|italic"/>
+
 	<RelativeLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:id="@+id/relative_inner"
 		android:layout_above="@id/gridContainer"
 		android:layout_centerHorizontal="true"
 		android:paddingBottom="50dp">
+
 
 		<ProgressBar
 			android:id="@+id/progressBar"
@@ -41,6 +53,7 @@
 
 	<Button
 		android:id="@+id/next"
+		android:layout_marginTop="20dp"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_below="@id/gridContainer"
