--- a/app/src/main/res/layout/fragment_quiz3.xml
+++ b/app/src/main/res/layout/fragment_quiz3.xml
@@ -1,7 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+	<TextView
+		android:id="@+id/text"
+		android:layout_width="266dp"
+		android:layout_height="wrap_content"
+		android:text="Trova il sinonimo di:"
+		android:textSize="29dp"/>
+
+	<TextView
+		android:id="@+id/parola"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentStart="true"
+		android:layout_below="@+id/text"
+		android:layout_marginBottom="5dp"
+		android:textStyle="bold|italic"
+		android:textSize="33dp"/>
+
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+		android:layout_width="369dp"
+		android:layout_height="26dp"
+		android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"
+		android:max="1000"
+		android:progressDrawable="@drawable/progress_bar"/>
+
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:textColor="#000"
+		android:layout_marginBottom="15dp"
+		android:text="placeholder"
+		android:id="@+id/countdown"/>
+
+
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recycler_list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_below="@id/countdown"
+		android:scrollbars="vertical">
+	</android.support.v7.widget.RecyclerView>
+
+</LinearLayout>
