--- a/app/src/main/res/layout/fragment_quiz4.xml
+++ b/app/src/main/res/layout/fragment_quiz4.xml
@@ -5,18 +5,22 @@
 	android:layout_height="match_parent">
 
 	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Leggi il testo e rispondi alla domanda:"
+		android:textSize="20dp"
+		android:layout_marginTop="6dp"
+		android:textColor="#000000"/>
+	<TextView
 		android:id="@+id/testoComprensione"
 		android:layout_width="match_parent"
 		android:layout_height="162dp"
-		android:layout_alignParentStart="true"
+		android:layout_alignParentEnd="true"
 		android:layout_alignParentTop="true"
-		android:layout_marginBottom="8dp"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="8dp"
+		android:layout_marginTop="56dp"
 		android:scrollbars="vertical"
 		android:textColor="#000000"
-		android:textSize="22dp"/>
+		android:textSize="22dp" />
 
 	<ProgressBar
 		android:id="@+id/progressBar"
@@ -25,19 +29,19 @@
 		android:layout_height="26dp"
 		android:layout_alignParentStart="true"
 		android:layout_alignParentTop="true"
-		android:layout_marginTop="193dp"
+		android:layout_marginTop="228dp"
 		android:max="1000"
-		android:progressDrawable="@drawable/progress_bar"/>
+		android:progressDrawable="@drawable/progress_bar" />
 
 	<TextView
 		android:id="@+id/countdown"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_alignParentStart="true"
 		android:layout_alignParentTop="true"
-		android:layout_alignStart="@+id/testoComprensione"
-		android:layout_marginTop="228dp"
+		android:layout_marginTop="263dp"
 		android:text="placeholder"
-		android:textColor="#000"/>
+		android:textColor="#000" />
 
 	<EditText
 		android:id="@+id/editText"
