--- a/app/src/main/res/layout/fragment_riepilog.xml
+++ b/app/src/main/res/layout/fragment_riepilog.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
 	<TextView
+		android:id="@+id/riepilogo"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="Riepilogo test:"
 		android:textSize="36dp"/>
-</android.support.constraint.ConstraintLayout>
+
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recycler_list_riepilog"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginTop="16dp"
+		android:layout_marginLeft="5dp"
+		android:layout_marginRight="5dp">
+
+	</android.support.v7.widget.RecyclerView>
+
+
+</LinearLayout>
